# Roliq

./: .dockerignore  .env.compose.example  .env.example  .gitattributes  .gitignore  .prettierignore  README.md  compose.yaml  go.mod  go.sum  go.work.sum  package.json  pnpm-lock.yaml  sqlc.yaml  turbo.json
.github/workflows/: ci.yml
apps/web/: .env.example  Dockerfile  next.config.ts  package.json
database/: migrations_test.go
database/migrations/: 00001_phase_one.sql
database/queries/: health.sql
docs/adr/: 0001-modular-monolith.md  0002-evidence-backed-resume-document.md  0003-asynchronous-resume-parsing.md  0004-resume-parsing-evaluation-framework.md  0005-provider-isolation-layer.md  0006-ai-cost-governance.md
docs/architecture/: security.md  system.md
docs/project-plan/: HANDOFF.md  MASTER_PLAN.md  PHASES.md  PHASE_01_CLOSEOUT.md  PHASE_02_BACKLOG.md  PHASE_02_DECISIONS.md  PHASE_02_FOUNDATION_HARDENING.md  PHASE_02_PLAN.md  PROGRESS.md  README.md
docs/runbooks/: resume-processing.md
internal/auth/: oidc.go
services/ai/: README.md  pyproject.toml
services/ai/internal/: __init__.py
services/ai/internal/contracts/: __init__.py  validator.py
services/ai/internal/providers/: __init__.py
services/ai/internal/providers/anthropic/: README.md
services/ai/internal/providers/fake/: __init__.py  providers.py
services/ai/internal/providers/gemini/: README.md
services/ai/internal/providers/interfaces/: __init__.py  models.py  protocols.py
services/ai/internal/providers/openai/: README.md
services/ai/tests/: test_contracts_and_fakes.py
(+83 files in other folders)
