[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "roliq-ai-foundation"
version = "0.1.0"
description = "Provider-neutral Roliq AI contracts and offline fake adapters"
requires-python = ">=3.12"
dependencies = ["jsonschema[format]>=4.25.1,<5"]

[project.optional-dependencies]
dev = ["pytest>=8.4,<9", "pypdf>=6.1,<7", "reportlab>=4.4,<5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["internal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
